// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileProperties components/core/ErrorModal No error 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          components/core/ErrorModal
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          No error
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  />
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <div
          style={
            Object {
              "fontSize": "15px",
            }
          }
        >
          ErrorModal is a special self-dismissing modal that can be used to show
        errors to the user.  By passing an array containing an Error object and
        a date object, the modal can determine on its own if it should be
        displayed or not and handles its own dismissal state internally.
        A helper function can be imported to create generic errors.
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            ErrorModal
            " Component
          </h3>
          <table>
            <thead>
              <tr>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  property
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  propType
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  required
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  default
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  error
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    other
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    [
                    ]
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  title
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    Error
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  alertColour
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    danger
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties components/core/ErrorModal custom title 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          components/core/ErrorModal
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          custom title
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <portal-dummy>
      <div
        className=""
      >
        <div
          className="modal fade"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          role="dialog"
          style={
            Object {
              "display": "block",
            }
          }
          tabIndex="-1"
        >
          <div
            className="modal-dialog"
            role="document"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h5
                  className="modal-title"
                >
                  custom title
                </h5>
              </div>
              <div
                className="modal-body"
              >
                <div
                  className="alert alert-danger fade"
                  role="alert"
                >
                  some error text
                </div>
              </div>
              <div
                className="modal-footer"
              >
                <button
                  aria-label={null}
                  className="btn btn-primary"
                  onClick={[Function]}
                  type="button"
                >
                  Ok
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-backdrop fade"
        />
      </div>
    </portal-dummy>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <div
          style={
            Object {
              "fontSize": "15px",
            }
          }
        >
          ErrorModal is a special self-dismissing modal that can be used to show
        errors to the user.  By passing an array containing an Error object and
        a date object, the modal can determine on its own if it should be
        displayed or not and handles its own dismissal state internally.
        A helper function can be imported to create generic errors.
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            ErrorModal
            " Component
          </h3>
          <table>
            <thead>
              <tr>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  property
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  propType
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  required
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  default
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  error
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    other
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    [
                    ]
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  title
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    Error
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  alertColour
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    danger
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties components/core/ErrorModal error text 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          components/core/ErrorModal
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          error text
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <portal-dummy>
      <div
        className=""
      >
        <div
          className="modal fade"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          role="dialog"
          style={
            Object {
              "display": "block",
            }
          }
          tabIndex="-1"
        >
          <div
            className="modal-dialog"
            role="document"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h5
                  className="modal-title"
                >
                  Error
                </h5>
              </div>
              <div
                className="modal-body"
              >
                <div
                  className="alert alert-danger fade"
                  role="alert"
                >
                  some error text
                </div>
              </div>
              <div
                className="modal-footer"
              >
                <button
                  aria-label={null}
                  className="btn btn-primary"
                  onClick={[Function]}
                  type="button"
                >
                  Ok
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-backdrop fade"
        />
      </div>
    </portal-dummy>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <div
          style={
            Object {
              "fontSize": "15px",
            }
          }
        >
          ErrorModal is a special self-dismissing modal that can be used to show
        errors to the user.  By passing an array containing an Error object and
        a date object, the modal can determine on its own if it should be
        displayed or not and handles its own dismissal state internally.
        A helper function can be imported to create generic errors.
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            ErrorModal
            " Component
          </h3>
          <table>
            <thead>
              <tr>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  property
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  propType
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  required
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  default
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  error
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    other
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    [
                    ]
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  title
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    Error
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  alertColour
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    danger
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileProperties components/core/ErrorModal with error 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          components/core/ErrorModal
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with error
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <portal-dummy>
      <div
        className=""
      >
        <div
          className="modal fade"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          role="dialog"
          style={
            Object {
              "display": "block",
            }
          }
          tabIndex="-1"
        >
          <div
            className="modal-dialog"
            role="document"
          >
            <div
              className="modal-content"
            >
              <div
                className="modal-header"
              >
                <h5
                  className="modal-title"
                >
                  Error
                </h5>
              </div>
              <div
                className="modal-body"
              >
                <div
                  className="alert alert-danger fade"
                  role="alert"
                >
                  some error text
                </div>
              </div>
              <div
                className="modal-footer"
              >
                <button
                  aria-label={null}
                  className="btn btn-primary"
                  onClick={[Function]}
                  type="button"
                >
                  Ok
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="modal-backdrop fade"
        />
      </div>
    </portal-dummy>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <div
          style={
            Object {
              "fontSize": "15px",
            }
          }
        >
          ErrorModal is a special self-dismissing modal that can be used to show
        errors to the user.  By passing an array containing an Error object and
        a date object, the modal can determine on its own if it should be
        displayed or not and handles its own dismissal state internally.
        A helper function can be imported to create generic errors.
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h3
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            ErrorModal
            " Component
          </h3>
          <table>
            <thead>
              <tr>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  property
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  propType
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  required
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  default
                </th>
                <th
                  style={
                    Object {
                      "textAlign": "left",
                      "verticalAlign": "top",
                    }
                  }
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  error
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    other
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    [
                    ]
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  title
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    Error
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
              <tr>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  alertColour
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  -
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                >
                  <span>
                    danger
                  </span>
                </td>
                <td
                  style={
                    Object {
                      "paddingRight": 10,
                      "verticalAlign": "top",
                    }
                  }
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
